--- a/partials/prototype-nav.html
+++ b/partials/prototype-nav.html
@@ -1,7 +1,7 @@
 <nav role="navigation">
   <div role="menubar">
     {{#each options.grunt.userConfig.sections}}
-    <a href="/{{this}}" role="menuitem">{{@key}}</a>
+    <a href="/bff3/{{this}}" role="menuitem">{{@key}}</a>
     {{/each}}
   </div>
 </nav>
