--- a/sass/global/_colors.scss
+++ b/sass/global/_colors.scss
@@ -4,9 +4,10 @@
 // We can utalize [Color Schemer](https://github.com/scottkellum/color-schemer)
 //   to build us awesome color guides.
 //////////////////////////////
-$cs-primary:            #c0ff33;
+$cs-primary:            #DE534E;
+
 // Primary color, can be any color you can use in CSS, plus CMYK from Color Schemer
-$cs-scheme:             accented-analogic;
+//$cs-scheme:             accented-analogic;
 // Options: mono, complement, triad, tetrad, analogic, accented-analogic
 $cs-hue-offset:         65;
 // Options: 0-100;
@@ -15,10 +16,8 @@ $cs-brightness-offset:  0;
 $cs-color-model:        ryb;
 // Options: rgb, ryb
 
-
-
 $black:     tint-stack(#333);
 $primary:   tint-stack(cs-primary());
-$secondary: tint-stack(cs-secondary());
-$tertiary:  tint-stack(cs-tertiary());
-$quadrary:  tint-stack(cs-quadrary());
+$secondary: tint-stack(#169141);
+$tertiary:  tint-stack(#2B72AB);
+$quadrary:  tint-stack(#5E3F3E);
